// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assisted placement (basket) > produces an identical draft for the same add sequence 1`] = `
{
  "arrangementStyle": "basket",
  "nextStemSeq": 10,
  "stems": [
    {
      "flowerId": "red-rose",
      "freshnessAtUse": 3,
      "instanceId": "red-rose#1",
      "rotationDeg": 3.56,
      "scale": 1,
      "size": "medium",
      "x": 0.5085,
      "y": 0.3571,
      "zIndex": 400,
    },
    {
      "flowerId": "pink-tulip",
      "freshnessAtUse": 3,
      "instanceId": "pink-tulip#2",
      "rotationDeg": -10.79,
      "scale": 1,
      "size": "medium",
      "x": 0.3818,
      "y": 0.4129,
      "zIndex": 401,
    },
    {
      "flowerId": "sunflower",
      "freshnessAtUse": 3,
      "instanceId": "sunflower#3",
      "rotationDeg": 12.25,
      "scale": 1,
      "size": "medium",
      "x": 0.6336,
      "y": 0.401,
      "zIndex": 402,
    },
    {
      "flowerId": "daisy",
      "freshnessAtUse": 3,
      "instanceId": "daisy#4",
      "rotationDeg": -15.51,
      "scale": 0.85,
      "size": "medium",
      "x": 0.3135,
      "y": 0.346,
      "zIndex": 300,
    },
    {
      "flowerId": "daisy",
      "freshnessAtUse": 3,
      "instanceId": "daisy#5",
      "rotationDeg": 16.24,
      "scale": 0.85,
      "size": "medium",
      "x": 0.692,
      "y": 0.3338,
      "zIndex": 301,
    },
    {
      "flowerId": "babys-breath",
      "freshnessAtUse": 3,
      "instanceId": "babys-breath#6",
      "rotationDeg": -31.47,
      "scale": 0.75,
      "size": "medium",
      "x": 0.1855,
      "y": 0.3625,
      "zIndex": 200,
    },
    {
      "flowerId": "babys-breath",
      "freshnessAtUse": 3,
      "instanceId": "babys-breath#7",
      "rotationDeg": 28.82,
      "scale": 0.75,
      "size": "medium",
      "x": 0.8097,
      "y": 0.3633,
      "zIndex": 201,
    },
    {
      "flowerId": "eucalyptus",
      "freshnessAtUse": 3,
      "instanceId": "eucalyptus#8",
      "rotationDeg": -33.98,
      "scale": 1.1,
      "size": "medium",
      "x": 0.1532,
      "y": 0.5128,
      "zIndex": 100,
    },
    {
      "flowerId": "eucalyptus",
      "freshnessAtUse": 3,
      "instanceId": "eucalyptus#9",
      "rotationDeg": 30.74,
      "scale": 1.1,
      "size": "medium",
      "x": 0.8539,
      "y": 0.5172,
      "zIndex": 101,
    },
  ],
  "wrapId": "wrap-cream",
}
`;

exports[`assisted placement (bouquet) > produces an identical draft for the same add sequence 1`] = `
{
  "arrangementStyle": "bouquet",
  "nextStemSeq": 10,
  "stems": [
    {
      "flowerId": "red-rose",
      "freshnessAtUse": 3,
      "instanceId": "red-rose#1",
      "rotationDeg": -2.59,
      "scale": 1,
      "size": "medium",
      "x": 0.5139,
      "y": 0.3066,
      "zIndex": 400,
    },
    {
      "flowerId": "pink-tulip",
      "freshnessAtUse": 3,
      "instanceId": "pink-tulip#2",
      "rotationDeg": -10.21,
      "scale": 1,
      "size": "medium",
      "x": 0.3928,
      "y": 0.3546,
      "zIndex": 401,
    },
    {
      "flowerId": "sunflower",
      "freshnessAtUse": 3,
      "instanceId": "sunflower#3",
      "rotationDeg": 13.96,
      "scale": 1,
      "size": "medium",
      "x": 0.6334,
      "y": 0.3475,
      "zIndex": 402,
    },
    {
      "flowerId": "daisy",
      "freshnessAtUse": 3,
      "instanceId": "daisy#4",
      "rotationDeg": -16.93,
      "scale": 0.85,
      "size": "medium",
      "x": 0.3094,
      "y": 0.3054,
      "zIndex": 300,
    },
    {
      "flowerId": "daisy",
      "freshnessAtUse": 3,
      "instanceId": "daisy#5",
      "rotationDeg": -5.57,
      "scale": 0.85,
      "size": "medium",
      "x": 0.4148,
      "y": 0.479,
      "zIndex": 301,
    },
    {
      "flowerId": "babys-breath",
      "freshnessAtUse": 3,
      "instanceId": "babys-breath#6",
      "rotationDeg": -22.05,
      "scale": 0.75,
      "size": "medium",
      "x": 0.1892,
      "y": 0.2457,
      "zIndex": 200,
    },
    {
      "flowerId": "babys-breath",
      "freshnessAtUse": 3,
      "instanceId": "babys-breath#7",
      "rotationDeg": 23.56,
      "scale": 0.75,
      "size": "medium",
      "x": 0.8034,
      "y": 0.265,
      "zIndex": 201,
    },
    {
      "flowerId": "eucalyptus",
      "freshnessAtUse": 3,
      "instanceId": "eucalyptus#8",
      "rotationDeg": -29.22,
      "scale": 1.1,
      "size": "medium",
      "x": 0.1682,
      "y": 0.487,
      "zIndex": 100,
    },
    {
      "flowerId": "eucalyptus",
      "freshnessAtUse": 3,
      "instanceId": "eucalyptus#9",
      "rotationDeg": 21.07,
      "scale": 1.1,
      "size": "medium",
      "x": 0.818,
      "y": 0.5135,
      "zIndex": 101,
    },
  ],
  "wrapId": "wrap-cream",
}
`;
